--- a/CountYourDays/app/src/main/res/layout/fragment_task.xml
+++ b/CountYourDays/app/src/main/res/layout/fragment_task.xml
@@ -22,5 +22,18 @@
         android:textSize="24sp"
         android:textStyle="bold" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="165dp"
+        android:layout_height="53dp"
+        android:layout_above="@+id/recyclerViewTasks"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="3dp"
+        android:layout_toStartOf="@+id/btnAddTask"
+        android:text="You Got This !"
+        android:textColor="@color/colorPrimary"
+        android:textSize="25sp"
+        android:fontFamily="@font/roboto_bold" />
+
 
 </RelativeLayout>
