--- a/CountYourDays/app/src/main/res/layout/fragment_home.xml
+++ b/CountYourDays/app/src/main/res/layout/fragment_home.xml
@@ -40,12 +40,14 @@
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Back at it to take control over your life"
+        android:text="Q"
         android:textSize="18sp"
         android:textColor="@color/black"
         android:fontFamily="@font/roboto_regular"
         android:layout_below="@id/welcomeTextView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:layout_gravity="center_horizontal"/>
+
 
 </RelativeLayout>
